# train_games_ai

./: .gitignore  README.md
.github/workflows/: ci.yml
chess-ai/: README.md  app.py  run_web_dashboard.sh  stockfish_query.sh
chess-ai/web/: app.js  index.html  styles.css
scripts/: audit_usable_models.py
snake-ai/: README.md  README_CN.md  pyproject.toml  requirements.txt  run_gui_train_demo.sh  run_web_dashboard.sh
snake-ai/main/: cnn_features.py  evaluate.py  gui_train_demo.py  hamiltonian_agent.py  snake_env.py  snake_game.py  snake_game_custom_wrapper_cnn.py  snake_game_custom_wrapper_mlp.py  test_cnn.py  test_mlp.py  train.py  train_cnn.py  train_mlp.py  web_dashboard.py
snake-ai/scripts/: audit_dashboard_layout.py  cnn_param_probe.py  monitor_snake21_progress.py  oracle_eval.py  safe_food_teacher.py  safe_food_teacher_eval.py  search_action_bias.py  train_cnn_oracle_bc.py
snake-ai/web/: app.js  index.html  styles.css
soccer-ai/: README.md  rl_trainer.py  run_web_dashboard.sh  server.py  soccer_env.py
soccer-ai/web/: app.js  index.html  styles.css
tests/: test_chess_training_integrity.py  test_snake_audit_namespace.py  test_snake_best_namespace.py  test_snake_cnn_cli_integrity.py  test_snake_dashboard_cnn_validation.py  test_snake_gui_demo_integrity.py  test_snake_training_integrity.py  test_soccer_training_integrity.py  test_tetris_training_integrity.py
tetris-ai/: README.md  evaluate_policy.py  rl_trainer.py  run_web_dashboard.sh  server.py  tetris_env.py
tetris-ai/web/: app.js  index.html  styles.css
